--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Landings#index</h1>
-<p>Find me in app/views/landings/index.html.erb</p>
+<h1>Warriors Game</h1>
+<img src="https://lh3.googleusercontent.com/e4GoKZdnlSJm4CTBMVmBex_PBAYN7jxcpnT8nrTktpMU4iAkwIe10tSwKm8nMCfNhNWJnymQSde6nlqGHIXBUev5MLBx7nZv1K3yTVJD_C4QSqSwlLifYszyuwtxBvD1rCVOsV1QLZUKHtMMm3lwLxGD5Zm5Rq99DZr9Jaq81SHC0Q-bVzggVKTd9sgMAVjI0Rfsetre5EeTVL12zP8fPCWgV0AICkDvuzYZ0FyiqINvnJx8XY7BmBmHx-D6b8LQQYw5mfkndBVLbVDdIjkubd2YSrQxmjQW_M0EJQKMuiXOTrFWadFFvEUUnf4l_bAf-o8jnXHHcjhtnxKkoIMxSFn1PlfLx7Q7wdNao1SaBRZbrvEjNIfOfaTmQMSKCdYkdVgbdWIIz0KbaElFEI_QTqZD_RWUag7NJVFV4lFE1YpVDB1ODwFLIyJYYEGEs6Ew2-L5-K9POzNecSRbr31CdcOHU6p6VFVHHua41osUXZsIPYHE093R9CeJ7VEqgqpxLGrVT7HTwsmHeyaMNXbGmrok-HoFmFLL4_DgrOh9St_M_4yAUqAWDXAZh4_ZnOeRwYjecnKhzjS2AVLPXHhkqQb2zdOhu2HgusXtTpxYw6Sps1CnXa8=w938-h703-no" alt="Mountain View" style="width:304px;height:228px;">
 
+<p> I went to the warriors game with Darragh </p>
 
