--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
     </button>
     <%= link_to "Fan Talk", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
-    <%= link_to "Basketball", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
+    <%= link_to image_tag("logos/basketball.png", size: "35x35", :align=> "middle"), defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
